python-scripts/CloudFormation/MyVPC_Stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  vpc66ca6701:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'false'
      Tags:
        - Key: Name
          Value: MyVPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
  subnet57d87930:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: eu-west-1a
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: 10.0.1.0_eu-west-1a_Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
  subnetd07fd099:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: eu-west-1b
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: 10.0.2.0_eu-west-1b_Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 552723ec-5be6-4d15-b012-4034cf0eb619
  igw52abe436:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: MyVPCInternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 10449bda-6c6a-494e-afc3-064c96e48004
  doptf477e790:
    Type: 'AWS::EC2::DHCPOptions'
    Properties:
      DomainName: eu-west-1.compute.internal
      DomainNameServers:
        - AmazonProvidedDNS
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 23d8e41d-79a6-4272-8986-7ee6685ed2d2
  acl0f176568:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref vpc66ca6701
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5411a6bf-151a-4fd8-b3bf-713d3ae50308
  rtbc11b1ea6:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: MyVPDDefaultRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 07140196-a2ef-4d07-b7b1-e7453d82d4f0
  rtb16191c71:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: MyVPCPublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fa4ed625-ccf3-41b6-a58b-ef15db05d47f
  rtbca1b1ead:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: MyVPCPrivateRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4254f2b0-54e4-4490-a643-6016c9c75949
  MyWebServer:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-d7b9a2b1
      InstanceType: t2.micro
      KeyName: Vincent-hsbcfrancepibinnovation
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: MyWebServer
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref subnet57d87930
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.1.139
              Primary: 'true'
          GroupSet:
            - !Ref sglaunchwizard2
          AssociatePublicIpAddress: 'true'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 92bd4d15-4b2c-41a0-8683-1d228cb0a0de
  MySQLServer:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-d7b9a2b1
      InstanceType: t2.micro
      KeyName: Vincent-hsbcfrancepibinnovation
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: MyMYSQLServer
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref subnetd07fd099
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.2.199
              Primary: 'true'
          GroupSet:
            - !Ref sgMyMySQLSG
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3e0dc8eb-a992-44e0-b43c-70ad5e1ddff4
  MyNatInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-076d5d61
      InstanceType: t2.micro
      KeyName: Vincent-hsbcfrancepibinnovation
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: MyNATInstance
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref subnet57d87930
          PrivateIpAddresses:
            - PrivateIpAddress: 10.0.1.51
              Primary: 'true'
          GroupSet:
            - !Ref sglaunchwizard2
          AssociatePublicIpAddress: 'true'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 69ac6a18-674a-459e-a297-b54110891c15
  sglaunchwizard2:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'launch-wizard-2 created 2017-06-30T09:00:40.952+02:00'
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: MyDMZ_SG
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b4f97ca5-7086-4460-add8-ba82b620cc93
  sgMyMySQLSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: MyMySQL_SG
      VpcId: !Ref vpc66ca6701
      Tags:
        - Key: Name
          Value: MyMySQL_SG
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3c97bfbc-57f6-4dd9-90f9-8adbc8aeefbb
  acl1:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref acl0f176568
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 34289ee1-50d1-488b-9f3b-c85fbe58bf52
  acl2:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref acl0f176568
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 466372e5-6355-40ff-96d5-d30e2ba809a1
  subnetacl1:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref acl0f176568
      SubnetId: !Ref subnetd07fd099
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c158d9f4-f90f-441e-a840-b8c2614a21eb
  subnetacl2:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref acl0f176568
      SubnetId: !Ref subnet57d87930
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e44dc007-7841-4c6b-89c8-7e8aa4e7cd26
  gw1:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref vpc66ca6701
      InternetGatewayId: !Ref igw52abe436
    Metadata:
      'AWS::CloudFormation::Designer':
        id: db43dcd7-098a-4c59-9053-37b6f6067881
  subnetroute2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref rtb16191c71
      SubnetId: !Ref subnet57d87930
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8c13a861-3331-4131-a364-78e617f7310f
  subnetroute3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref rtbca1b1ead
      SubnetId: !Ref subnetd07fd099
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a7bf1548-c3c2-48dc-b5ba-ab9a8a52f04c
  route1:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rtb16191c71
      GatewayId: !Ref igw52abe436
    DependsOn: gw1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a3d17042-328a-4539-a34c-eff8410c6ae4
  route2:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rtbca1b1ead
      InstanceId: !Ref MyNatInstance
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 910a54a3-6e36-405e-b745-e5b4963661b7
  dchpassoc1:
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      VpcId: !Ref vpc66ca6701
      DhcpOptionsId: !Ref doptf477e790
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7187a7c3-da76-4089-a20c-0347978e6184
  ingress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sglaunchwizard2
      IpProtocol: tcp
      FromPort: '80'
      ToPort: '80'
      CidrIp: 0.0.0.0/0
  ingress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sglaunchwizard2
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 0.0.0.0/0
  ingress3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sglaunchwizard2
      IpProtocol: tcp
      FromPort: '443'
      ToPort: '443'
      CidrIp: 0.0.0.0/0
  ingress4:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgMyMySQLSG
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 10.0.1.0/24
  ingress5:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgMyMySQLSG
      IpProtocol: tcp
      FromPort: '3306'
      ToPort: '3306'
      CidrIp: 10.0.1.0/24
  egress1:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      GroupId: !Ref sglaunchwizard2
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
  egress2:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      GroupId: !Ref sgMyMySQLSG
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
Description: MyVPC template
Metadata:
  'AWS::CloudFormation::Designer':
    23d8e41d-79a6-4272-8986-7ee6685ed2d2:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 1110
      z: 1
      embeds: []
    10449bda-6c6a-494e-afc3-064c96e48004:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 1110
      z: 1
      embeds: []
    5cf7e68b-c469-47f9-a9d2-5af1d5e7018e:
      size:
        width: 1050
        height: 960
      position:
        x: 60
        'y': 90
      z: 1
      embeds:
        - 3c97bfbc-57f6-4dd9-90f9-8adbc8aeefbb
        - b4f97ca5-7086-4460-add8-ba82b620cc93
        - 4254f2b0-54e4-4490-a643-6016c9c75949
        - fa4ed625-ccf3-41b6-a58b-ef15db05d47f
        - 07140196-a2ef-4d07-b7b1-e7453d82d4f0
        - 5411a6bf-151a-4fd8-b3bf-713d3ae50308
        - 552723ec-5be6-4d15-b012-4034cf0eb619
        - a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
    7187a7c3-da76-4089-a20c-0347978e6184:
      source:
        id: 23d8e41d-79a6-4272-8986-7ee6685ed2d2
      target:
        id: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
    db43dcd7-098a-4c59-9053-37b6f6067881:
      source:
        id: 10449bda-6c6a-494e-afc3-064c96e48004
      target:
        id: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
    3c97bfbc-57f6-4dd9-90f9-8adbc8aeefbb:
      size:
        width: 60
        height: 60
      position:
        x: 780
        'y': 660
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds: []
    b4f97ca5-7086-4460-add8-ba82b620cc93:
      size:
        width: 60
        height: 60
      position:
        x: 900
        'y': 660
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds: []
    4254f2b0-54e4-4490-a643-6016c9c75949:
      size:
        width: 240
        height: 240
      position:
        x: 780
        'y': 150
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds:
        - 910a54a3-6e36-405e-b745-e5b4963661b7
    fa4ed625-ccf3-41b6-a58b-ef15db05d47f:
      size:
        width: 240
        height: 240
      position:
        x: 480
        'y': 450
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds:
        - a3d17042-328a-4539-a34c-eff8410c6ae4
    a3d17042-328a-4539-a34c-eff8410c6ae4:
      size:
        width: 60
        height: 60
      position:
        x: 510
        'y': 510
      z: 3
      parent: fa4ed625-ccf3-41b6-a58b-ef15db05d47f
      embeds: []
      references:
        - 10449bda-6c6a-494e-afc3-064c96e48004
      dependson:
        - db43dcd7-098a-4c59-9053-37b6f6067881
    07140196-a2ef-4d07-b7b1-e7453d82d4f0:
      size:
        width: 150
        height: 150
      position:
        x: 780
        'y': 450
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds: []
    5411a6bf-151a-4fd8-b3bf-713d3ae50308:
      size:
        width: 330
        height: 240
      position:
        x: 90
        'y': 450
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds:
        - 466372e5-6355-40ff-96d5-d30e2ba809a1
        - 34289ee1-50d1-488b-9f3b-c85fbe58bf52
    466372e5-6355-40ff-96d5-d30e2ba809a1:
      size:
        width: 60
        height: 60
      position:
        x: 120
        'y': 510
      z: 3
      parent: 5411a6bf-151a-4fd8-b3bf-713d3ae50308
      embeds: []
    34289ee1-50d1-488b-9f3b-c85fbe58bf52:
      size:
        width: 60
        height: 60
      position:
        x: 240
        'y': 510
      z: 3
      parent: 5411a6bf-151a-4fd8-b3bf-713d3ae50308
      embeds: []
    552723ec-5be6-4d15-b012-4034cf0eb619:
      size:
        width: 240
        height: 240
      position:
        x: 480
        'y': 150
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds:
        - 3e0dc8eb-a992-44e0-b43c-70ad5e1ddff4
    a7bf1548-c3c2-48dc-b5ba-ab9a8a52f04c:
      source:
        id: 4254f2b0-54e4-4490-a643-6016c9c75949
      target:
        id: 552723ec-5be6-4d15-b012-4034cf0eb619
    c158d9f4-f90f-441e-a840-b8c2614a21eb:
      source:
        id: 5411a6bf-151a-4fd8-b3bf-713d3ae50308
      target:
        id: 552723ec-5be6-4d15-b012-4034cf0eb619
    3e0dc8eb-a992-44e0-b43c-70ad5e1ddff4:
      size:
        width: 60
        height: 60
      position:
        x: 510
        'y': 210
      z: 3
      parent: 552723ec-5be6-4d15-b012-4034cf0eb619
      embeds: []
      isrelatedto:
        - 3c97bfbc-57f6-4dd9-90f9-8adbc8aeefbb
    a6ab5c65-db2e-4cc0-a68b-fb3175ccf868:
      size:
        width: 330
        height: 240
      position:
        x: 90
        'y': 150
      z: 2
      parent: 5cf7e68b-c469-47f9-a9d2-5af1d5e7018e
      embeds:
        - 69ac6a18-674a-459e-a297-b54110891c15
        - 92bd4d15-4b2c-41a0-8683-1d228cb0a0de
    8c13a861-3331-4131-a364-78e617f7310f:
      source:
        id: fa4ed625-ccf3-41b6-a58b-ef15db05d47f
      target:
        id: a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
    e44dc007-7841-4c6b-89c8-7e8aa4e7cd26:
      source:
        id: 5411a6bf-151a-4fd8-b3bf-713d3ae50308
      target:
        id: a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
    69ac6a18-674a-459e-a297-b54110891c15:
      size:
        width: 60
        height: 60
      position:
        x: 120
        'y': 210
      z: 3
      parent: a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
      embeds: []
      isrelatedto:
        - b4f97ca5-7086-4460-add8-ba82b620cc93
    910a54a3-6e36-405e-b745-e5b4963661b7:
      size:
        width: 60
        height: 60
      position:
        x: 810
        'y': 210
      z: 3
      parent: 4254f2b0-54e4-4490-a643-6016c9c75949
      embeds: []
      references:
        - 69ac6a18-674a-459e-a297-b54110891c15
    92bd4d15-4b2c-41a0-8683-1d228cb0a0de:
      size:
        width: 60
        height: 60
      position:
        x: 240
        'y': 210
      z: 3
      parent: a6ab5c65-db2e-4cc0-a68b-fb3175ccf868
      embeds: []
      isrelatedto:
        - b4f97ca5-7086-4460-add8-ba82b620cc93
